--- a/pitch_is_perfect/Base.lproj/Main.storyboard
+++ b/pitch_is_perfect/Base.lproj/Main.storyboard
@@ -44,6 +44,15 @@
                                     <action selector="fastAudio:" destination="3de-l7-Eo6" eventType="touchUpInside" id="ieB-Gz-8fX"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C9c-Nx-19n">
+                                <rect key="frame" x="41" y="328" width="100" height="100"/>
+                                <state key="normal" image="squirrel">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="lowPitchAudio:" destination="3de-l7-Eo6" eventType="touchUpInside" id="dUK-9p-H4J"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -53,6 +62,7 @@
                             <constraint firstItem="brL-Q6-zeG" firstAttribute="leading" secondItem="b4S-VM-irU" secondAttribute="leadingMargin" constant="25" id="eEA-fX-AE6"/>
                             <constraint firstAttribute="centerX" secondItem="5AQ-OY-Rsc" secondAttribute="centerX" constant="-2" id="hI8-zd-pja"/>
                             <constraint firstItem="brL-Q6-zeG" firstAttribute="top" secondItem="Htq-DZ-irc" secondAttribute="bottom" constant="50" id="mM9-NU-nK8"/>
+                            <constraint firstItem="C9c-Nx-19n" firstAttribute="top" secondItem="brL-Q6-zeG" secondAttribute="bottom" constant="100" id="pta-B5-4cI"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -84,7 +94,7 @@
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recording" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0H2-jd-8od">
                                 <rect key="frame" x="263" y="385" width="79" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZf-k7-58K">
@@ -142,6 +152,7 @@
         <image name="fast" width="100" height="100"/>
         <image name="microphone" width="100" height="100"/>
         <image name="slow" width="100" height="100"/>
+        <image name="squirrel" width="100" height="100"/>
         <image name="stop" width="50" height="50"/>
     </resources>
 </document>
